force-app/main/default/objects/Einstein_Recommender__mdt/Einstein_Recommender__mdt.object-meta.xml
<CustomObject>
    <label>Einstein Recommender</label>
    <pluralLabel>Einstein Recommenders</pluralLabel>
</CustomObject>