force-app/main/default/objects/Einstein_Recommender__mdt/fields/Einstein_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Einstein_Configuration__c</fullName>
    <label>Einstein Configuration</label>
    <referenceTo>Einstein_Configuration__mdt</referenceTo>
    <relationshipLabel>Einstein Recommenders</relationshipLabel>
    <relationshipName>Einstein_Recommenders</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>