force-app/main/default/objects/Einstein_Recommender__mdt/fields/Einstein_Id__c.field-meta.xml
<CustomField>
    <fullName>Einstein_Id__c</fullName>
    <label>Einstein Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>